Fixed the second row alignment for desktop. OK now for both desktop and mobile. To fix the profile div to be aligned with the mini divs next.

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ html {
 
 .main-container {
   position: relative;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   height: 160px;
   margin: 10px;
   padding: 0px;
@@ -79,8 +79,7 @@ html {
   width: 100%;
   left: 0px;
   border-radius: 15px;
-  top: 40px;
-  
+  top: 40px; 
 }
 
 img {
@@ -106,6 +105,7 @@ color: white;
   font-style: normal;
   color: white;
 }
+
 
 .theme-box-work {
   position: absolute;
